Change result box vw

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </form>
     </section>
-    <section class="result-section">
+    <section>
         <button type="submit">Submit</button>
         <div class="result-box">
             <p class="result">Waiting for input...</p> 
